test/LitTests/SemanticAnalysis/LifetimeMethods/InvalidArgumentCountDestroy.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__destroy' has incorrect argument count
	void __destroy(unused int i) noexcept { }
}

// CHECK: 1 error generated.
